# RTML-nix

./: Cargo.toml  README.md  RELEASE_NOTES_v0.1.0.md  flake.nix  result
assets/: rtml.desktop
scripts/: PKGBUILD  build.bat
src/: lib.rs
src/auth/: oauth.rs
src/instance/: desktop.rs
src/online/: mod.rs
src/tui/: event.rs  input.rs  render.rs
src/tui/widgets/: instances.rs
src/tui/widgets/popups/: mod.rs
src/tui/widgets/popups/online/: mod.rs  render.rs  state.rs
